#                                                                                          #
#                                      Changelog                                           #
#                                                                                          #
############################################################################################

[119] --> Fix Culling Of Stratholme.
[118] --> Add Astranaar SHOP.
[117] --> Fix Night Elf: Shadowmeld.
[116] --> Revert '[gc354] remove IoC from rbg list'.
[115] --> Delete [MOD] CharacterHistory.
[114] --> Fix Val'kyr Shadowguard speed.
[113] --> Add NPC MMR Master (Final version).
[112] --> Add NPC MMR Master (Beta).
[111] --> Fix LoS Totems (Test!).
[110] --> Fix Arena frames (Test!).
[109] --> Add Mr.Maniek ;)
[108] --> Fix item procs of Reign of the Dead / Reign of the Unliving, cooldown should be used.
[107] --> Fix Item - Shaman T10 Elemental 4P Bonus.
[106] --> Fix buff Frostmourne.
[105] --> Add [MOD] CharacterHistory.
[104] --> Fix quest The Ring of Blood: The Final Challenge (Nagrand Arena).
[103] --> Fix Zul'drak arena.
[102] --> Scripts/BlackTemple: Fix Illidan.
[101] --> Fix Bonus 4P T10 Rogue.
[100] --> Scripts/BlackTemple: Prevent Akama (Shade Encounter) to aggro outside of event.
[99] --> Fix Bonus 4P T10 Warrior.
[98] --> Fix Sunwell Plateau. (Test!)
[97] --> Fixed a crash with npc_boneguard_mounted script. (Thx fiveofeight)
[96] --> Fix Isle of Conquest - Teleports.
[95] --> Fix Halion.
[94] --> Fix Normal and Glyph of Eternal Water - Water Elemental.
[93] --> Fix Quests Argent Tournament.
[92] --> Add [MOD] MultiKill.
[91] --> Fix lowlevel pets cause big damage.
[90] --> Fix Warlock: Spell Lock.
[89] --> Fix crash (Test!).
[88] --> Fix Hunter pet scale.
[87] --> Fix Magic Absorption.
[86] --> Fix crash Trial Of The Crusader.
[85] --> Remove unit lost control before teleport.
[84] --> Fix loot GunShip.
[83] --> Add Name Developer Announce.